syntax = "proto3";

package go.micro.srv.user;

service User {
	// 发送短信验证码
	rpc SendSms(Request) returns (Response) {}
	// 用户注册
	rpc Register(RegReq) returns (Response) {}
}

// 用户注册-传入
message RegReq {
	string mobile = 1;
	string password = 2;
	string sms_code = 3;
}

// 传入参数
message Request {
	string phone = 1;
	string imgCode = 2;
	string uuid = 3;
}

// 传出参数
message Response {
	string errno = 1;
	string errmsg = 2;
}